--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import './style/moviecard.css';
+@import './style/navbar.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
