--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,21 @@
 .wrapper {
   width: 900px;
   margin-top: 20px;
+  background-color: rgba(255, 255, 255, .1);
+  box-shadow: 0 0 5px;
+  backdrop-filter: blur(10px);
+  color: white;
+}
+
+.btn-change:hover {
+  background-color: #ed171f;
+  color: white;
+}
+
+.btn-change {
+  width: 80px;
+  background-color: rgba(255, 255, 255, .2);
+  box-shadow: 0 0 5px;
+  backdrop-filter: blur(10px);
+  color: white;
 }
